// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.core;

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "PhoneNumberProto";
option java_package = "org.mojolang.mojo.core";

message PhoneNumber {
    enum CountryCodeSource {
        COUNTRY_CODE_SOURCE_UNSPECIFIED=0;
        COUNTRY_CODE_SOURCE_FROM_NUMBER_WITH_PLUS_SIGN=1;
        COUNTRY_CODE_SOURCE_FROM_NUMBER_WITH_IDD=5;
        COUNTRY_CODE_SOURCE_FROM_NUMBER_WITHOUT_PLUS_SIGN=10;
        COUNTRY_CODE_SOURCE_FROM_DEFAULT_COUNTRY=20;
    }

    int32 country_code = 1;
    uint64 national_number = 2;
    string extension = 3;
    bool italian_leading_zero = 4;
    int32 number_of_leading_zeros = 8;
    string raw_input = 5;
    CountryCodeSource country_code_source = 6;
    string preferred_domestic_carrier_code = 7;
}