// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.core;

option go_package = "github.com/mojo-lang/core/go/pkg/mojo/core;core";
option java_multiple_files = true;
option java_outer_classname = "RangeProto";
option java_package = "org.mojolang.mojo.core";

message IntRange {
    int64 start = 1;
    int64 end = 2;
    bool start_excluded = 9;
    bool end_included = 10;
}